# speedbox

./: .gitignore  README.md  client.py  database.db  delivery-person.py  init_db.py  main.py  main2.py  package-lock.json  package.json  person.py  pessoa.py  populate.py  py.py  pyproject.toml  requirements.txt  tabelas.txt
api/: main.py
api/static/: style.css
api/templates/: index.html  login.html  register.html
app/dashboards/: client_dashboard.py  client_menu.py  delivery_person_dashboard.py  delivery_person_menu.py  enterprise_dashboard.py  enterprise_menu.py
app/login/: login.py
app/orders/: accept_order_delivery_person.py  create_new_order.py  make_order_client.py  make_order_enterprise.py  open_orders.py  update_order_status_delivery_person.py  view_open_orders_client.py  view_open_orders_enterprise.py  view_order_history_client.py  view_order_history_enterprise.py  view_orders.py  (+1 more)
classes/: Address.py  NFe.py  Vehicle.py  Veihcle.py  client.py  colors.py  delivery_person.py  enterprise.py  item.py  order.py  person.py  pix.py  product.py  resources.py  transaction.py  user.py  vehicle.py
db/: Veihcle_db.py  __init__.py  address.py  crud_address_client.py  crud_address_enterprise.py  crud_boleto.py  crud_card.py  crud_client.py  crud_delivery_person.py  crud_enterprise.py  crud_order_clients.py  crud_order_enterprise.py  crud_pix.py  crud_product.py  crud_transactions.py  crud_user.py  crud_vehicle.py  database.py  db.py  enterprise_db.py  order.py
test/: login_logout.py  register.py  register_client.py
validations/: validations.py
(+37 files in other folders)
