[project]
name = "speedbox"
version = "0.1.0"
description = ""
authors = [
    {name = "Toltz",email = "joaovictorcarrenho@gmail.com"}
]
license = {text = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "openrouteservice (>=2.3.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "qrcode (>=8.2,<9.0)",
    "pix-utils (>=1.0.1,<2.0.0)",
    "crcmod (>=1.7,<2.0)",
    "pillow (>=11.2.1,<12.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
ruff = "^0.11.8"
taskipy = "^1.14.1"
uvicorn = "^0.34.2"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'


[tool.taskipy.tasks]

lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
build-tailwind = "npx tailwindcss -i ./api/static/tailwind.css -o ./api/static/tailwind.css --minify"